--- a/src/components/ChatRoom.module.scss
+++ b/src/components/ChatRoom.module.scss
@@ -10,7 +10,7 @@
     display: flex;
     width: 100%;
     bottom: 0;
-    position: fixed;
+    position: relative;
   }
 
   .emojiPicker {
@@ -76,6 +76,7 @@
 
   .inputWrapper {
     width: 100%;
+    height: 5vh;
     position: absolute;
     bottom: 0;
     input,
