--- a/src/components/ChatRoom.module.scss
+++ b/src/components/ChatRoom.module.scss
@@ -77,7 +77,7 @@
   .inputWrapper {
     width: 100%;
     height: 5vh;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     input,
     .icon {
