--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,6 +1,14 @@
 @use "./styles/variables";
 @use "./styles/mixins";
 
+.app {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+}
+
 .header {
   display: flex;
   position: fixed;
@@ -42,12 +50,4 @@
 
 .card {
   margin: auto;
-}
-
-@media (max-width: 500px) {
-  .header {
-    margin: 0;
-    background-color: variables.$background-lighter-color;
-    width: 100%;
-  }
 }
