--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -14,14 +14,17 @@
 }
 
 @mixin signInCard {
+  font-family: "Arvo", serif;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   height: 80vh;
   width: 80vw;
   max-width: 700px;
 }
 @mixin signInCardSmall {
-  width: 90vw;
-  max-width: unset;
-  margin: 0;
+  width: 92vw;
 }
 
 @mixin chatSection {
@@ -39,7 +42,5 @@
 }
 
 @mixin chatSectionSmall {
-  max-width: unset;
-  margin: 0;
-  width: 90vw;
+  width: 92vw;
 }
