--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -3,6 +3,7 @@
 
 .app {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
@@ -11,7 +12,6 @@
 
 .header {
   display: flex;
-  position: fixed;
   top: 0;
   justify-content: space-between;
   padding: 12px;
