--- a/src/components/ChatRoom.module.scss
+++ b/src/components/ChatRoom.module.scss
@@ -7,12 +7,8 @@
 
 .inputWrapper {
   display: flex;
+  position: relative;
   width: 100%;
-  bottom: 0;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  opacity: 0.9;
 }
 
 .emojiPicker {
@@ -25,8 +21,12 @@
   padding-left: 12px;
   padding-right: 12px;
   margin-bottom: 60px;
+  opacity: 0.9;
 }
 .chatRoom {
+  display: flex;
+  flex-direction: column;
+  height: 80vh;
   input {
     border-bottom-left-radius: 5px;
     font-size: 1em;
