--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -34,7 +34,7 @@
   gap: 18px;
   overflow-y: auto;
   overflow-x: hidden;
-  height: 80vh;
+  height: 100%;
   width: 80vw;
   max-width: 700px;
   padding: 32px 12px 50px 12px;
